SSDM-13154 : Server with netty hander