@@ -14,9 +14,12 @@
  * limitations under the License.
  */
 
-package ch.ethz.sis.afs.startup;
+package ch.ethz.sis.afsserver.startup;
 
 import ch.ethz.sis.afs.manager.TransactionManager;
+import ch.ethz.sis.afs.startup.AtomicFileSystemParameter;
+import ch.ethz.sis.afsserver.http.HttpServerHandler;
+import ch.ethz.sis.afsserver.http.netty.NettyHttpServer;
 import ch.ethz.sis.shared.json.JSONObjectMapper;
 import ch.ethz.sis.shared.log.LogFactory;
 import ch.ethz.sis.shared.log.LogFactoryFactory;
@@ -24,6 +27,7 @@ import ch.ethz.sis.shared.log.LogManager;
 import ch.ethz.sis.shared.startup.Configuration;
 
 import java.io.File;
+import java.io.InputStream;
 import java.util.List;
 
 public class Main {
@@ -32,9 +36,10 @@ public class Main {
         return List.of(AtomicFileSystemParameter.class);
     }
 
+    // Please start with --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true
     public static void main(String[] args) throws Exception {
         System.out.println("Current Working Directory: " + (new File("")).getCanonicalPath());
-        Configuration configuration = new Configuration(getParameterClasses(), "../afs/src/main/resources/afs-config.properties");
+        Configuration configuration = new Configuration(getParameterClasses(), "../afs-server/src/main/resources/afs-server-config.properties");
 
         // Initializing LogManager
         LogFactoryFactory logFactoryFactory = new LogFactoryFactory();
@@ -42,12 +47,26 @@ public class Main {
         logFactory.configure(configuration.getStringProperty(AtomicFileSystemParameter.logConfigFile));
         LogManager.setLogFactory(logFactory);
 
-        //
+        // Initializing Transaction Manager
         JSONObjectMapper jsonObjectMapper = configuration.getSharableInstance(AtomicFileSystemParameter.jsonObjectMapperClass);
         String writeAheadLogRoot = configuration.getStringProperty(AtomicFileSystemParameter.writeAheadLogRoot);
         String storageRoot = configuration.getStringProperty(AtomicFileSystemParameter.storageRoot);
 
         TransactionManager transactionManager = new TransactionManager(jsonObjectMapper, writeAheadLogRoot, storageRoot);
         transactionManager.reCommitTransactionsAfterCrash();
+
+        //Initializing Http Server
+        int port = configuration.getIntProperty(AtomicFileSystemServerParameter.port);
+        int maxContentLength = configuration.getIntProperty(AtomicFileSystemServerParameter.maxContentLength);
+        String uri = configuration.getStringProperty(AtomicFileSystemServerParameter.uri);
+
+        NettyHttpServer nettyHttpServer = new NettyHttpServer();
+        nettyHttpServer.start(port, maxContentLength, uri, new HttpServerHandler() {
+            @Override
+            public byte[] process(InputStream requestBody) {
+                return new byte[0];
+            }
+        });
+        Thread.currentThread().join();
     }
 }
